# tweaks

./: .gitignore  AI.md  Packages  Packages.bz2  README.md  Release  build-all.bat  build-repo.bat  index.html  theos-device.env.example  theos-package-lib.sh  theos-package-local.sh  theos-package-remote.sh
LSText/: Makefile  Tweak.xm  build-and-upload.bat  build.bat  control
MCSplash/: Makefile  Tweak.xm  build.bat  control  splashes.txt
ScreenMirroring/: Makefile  SMCommon.h  SMCommon.mm  SMHIDUsages.h  SMHardwareKeys.h  SMHardwareKeys.mm  SMIOHID.h  SMIOMobileFramebufferHook.xm  SMInputInjector.h  SMInputInjector.mm  SMKeysymMap.h  SMKeysymMap.mm  SMScreenCapture.h  SMScreenCapture.mm  SMVNCConnection.h  SMVNCConnection.mm  SMVNCCrypto.h  SMVNCCrypto.mm  SMVNCServer.h  SMVNCServer.mm  Tweak.xm  build-and-upload.bat  build.bat  build.sh  control
ScreenMirroringViewer/: ScreenMirroringViewer.sln  build.bat
SensorUsageLog/: Makefile  Tweak.xm  build-and-upload.bat  build.bat  control  sensorusagelog.plist
Settings26/: Makefile  Tweak.xm  build-and-upload.bat  build.bat  control
ShareClipboard/: Makefile  SCCommon.h  SCConnection.h  SCConnection.mm  SCPasteboard.h  SCPasteboard.mm  SCPasteboardAlerts.xm  (+8 more)
ShareClipboardWindows/: .gitignore  CMakeLists.txt  README.md  build.bat
ShareClipboardWindows/installer/: Product.wxs  build-installer.bat
ShareClipboardWindows/src/: Clipboard.cpp  Clipboard.h  Connection.cpp  Connection.h  Log.cpp  Log.h  Protocol.cpp  Protocol.h  Startup.cpp  Startup.h  SyncEngine.cpp  SyncEngine.h  TrayIcon.cpp  TrayIcon.h  main.cpp
(+130 files in other folders)
